# pipe2prompt

./: .flake8  .gitignore  Makefile  README.rst  pyproject.toml
.github/workflows/: lint.yml
pipe2prompt/: cli.py  completion.py  config.toml  prompt.py
pp/: cli.py  core.py
samples/: create-commit-message.toml  pr-template.toml
