[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipe2prompt"
version = "0.1.0"
description = "Prompt to pipe"
authors = [{name = "Ahn Keeho", email = "digsy89@gmail.com"}]
license = {text = "MIT"}
dependencies = ["click"]

[project.scripts]
p2p = "pipe2prompt.cli:cli"